
Mon May 22 09:56:42 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in	- Install kpasswd as kpasswd_old.  Manpage too.

Fri Mar 17 15:36:07 1995  Chris Provenzano (proven@mit.edu)

	* kpasswd.c: Cast malloc() return value to shut compiler up.

Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)

        * kpasswd.c: Use new calling convention for krb5_sendauth(), 
                krb5_mk_priv(), and krb5_rd_priv().

Thu Mar  2 12:25:29 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:29:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:21:41 1995  John Gilmore  (gnu at toad.com)

	* kpasswd.c:  Avoid <krb5/...> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * kpasswd.c: Call krb5_sendauth(), krb5_get_credentials()
  		with new calling convention.

Fri Feb 10 17:48:05 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kpasswd.c: Don't include <krb5/asn.1/encode.h>; use <krb5/asn1.h>.

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * kpasswd.c Removed krb5_keytype, changed krb5_enctype to 
		krb5_enctype *, changed krb5_preauthtype to krb5_preauthtype *
		for krb5_get_in_tkt_with_password() rotuine.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Tue Dec 27 06:09:03 1994  Richard Basch  (probe@tardis)

	* configure.in:
	combined KRB5_UTPID, KRB5_UTTYPE, and KRB5_UTHOST
	into CHECK_UTMP macro (and added additional checks)

Fri Nov 18 01:08:39 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use new macros KRB5_UTPID, KRB5_UTTYPE, and
	KRB5_UTHOST (from epeisach).

Wed Oct 19 12:18:26 1994  Theodore Y. Ts'o  (tytso@dcl)
