@@ -4,7 +4,7 @@ CONFIG_RULES
 AC_SET_BUILDTOP
 AC_PROG_INSTALL
 WITH_NETLIB
-AC_HAVE_HEADERS(unistd.h)
+AC_HAVE_HEADERS(unistd.h stdlib.h)
 CHECK_UTMP
 AC_FUNC_CHECK(getutent,AC_DEFINE(HAVE_GETUTENT))
 ET_RULES
