@@ -1,3 +1,8 @@
+Wed May 24 07:12:08 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* configure.in: Check for stdlib.h.
+
+	* kpasswd.c, networked.c: Include stdlib.h or declare malloc()
 
 Mon May 22 09:56:42 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* Makefile.in	- Install kpasswd as kpasswd_old.  Manpage too.
